# AgentGuard

./: CLAUDE.md  README.md  build_for_mac.sh  for_agents.txt  package-lock.json  package.json  release.sh
.github/workflows/: build-release.yml
docs/: CNAME  index.html  latest-version.json  robots.txt  sitemap.xml  styles.css
src/: backends.js  base.css  behaviour.js  charts.js  components.css  dark-mode.css  dashboard.js  garden.js  guide.js  home.js  howto.js  index.html  logs.js  main.js  pages-backends.css  pages-behaviour.css  pages-dashboard.css  pages-garden.css  pages-guide.css  pages-home.css  pages-layout.css  pages-logs.css  pages-settings.css  pages.css  settings.js  token-saving.js  tray.html  updater.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: builtin_patterns.rs  claude_hooks.rs  codex_hooks.rs  cursor_hooks.rs  database.rs  dep_protection.rs  dlp.rs  lib.rs  main.rs  pattern_utils.rs  predefined_backend_settings.rs  proxy.rs  requestresponsemetadata.rs  server.rs  symbols.rs  token_saving.rs
src-tauri/src/backends/: claude.rs  codex.rs  custom.rs  mod.rs
src-tauri/src/commands/: backends.rs  claude.rs  codex.rs  ctx_read_hooks.rs  cursor.rs  dlp.rs  hook_ordering.rs  mod.rs  shell_compression.rs  stats.rs
src-tauri/src/compression/: compression_cache.rs  compression_summary.rs  diff_compressor.rs  mod.rs  search_compressor.rs  tool_crusher.rs
src-tauri/src/ctx_read/: cache.rs  compressor.rs  ctx_read.rs  ctx_smart_read.rs  mod.rs  protocol.rs
src-tauri/src/shell_compression/: compress.rs  executor.rs  mod.rs  tokens.rs
src-tauri/src/shell_compression/patterns/: cargo.rs  mod.rs  typescript.rs
