[package]
name = "agentguard"
version = "0.1.0"
description = "AgentGuard by Quilr"
authors = ["Quilr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agentguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proxy server dependencies
axum = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = "0.4"
async-stream = "0.3"

# Compression
flate2 = "1.0"

# Hex encoding
hex = "0.4"

# DLP regex matching
regex = "1"

# Token counting for shell compression
tiktoken-rs = "0.6"

# ctx_read: file cache diffing and hashing
similar = "2"
md-5 = "0.10"

# Tree-sitter: code symbol extraction for Garden view
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
streaming-iterator = "0.1"
